Finished Design System

--- a/index.css
+++ b/index.css
@@ -3,9 +3,9 @@
 /* ================= */
 
 :root {
-   --clr-dark: #0B0D17;
-   --clr-accent: #8A9BFF;
-   --clr-white: #fff;
+   --clr-dark: 230 35% 7%;
+   --clr-accent: 231 77% 90%;
+   --clr-white: 0 0% 100%;
 
    --fs-900: 9.375rem;
    --fs-800: 6.25rem;
@@ -41,8 +41,8 @@ h1, h2, h3, h4, h5, h6 {
 body {
    font-family: var(--ff-sans-normal);
    font-size: var(--fs-400);
-   color: var(--clr-white);
-   background-color: var(--clr-dark) ;
+   color: hsl( var(--clr-white) );
+   background-color: hsl( var(--clr-dark) );
    line-height: 1.5;
    min-height: 100vh;
 }
@@ -86,6 +86,16 @@ input, button, textarea, select {
    gap: var(--gap, 1rem);
 }
 
+/* .flow > * + * {   adds to all components that have a sibling before it
+   margin-top: 1rem;
+   outline: 1px solid red;
+} */
+
+.flow > *:where(:not(:first-child)) {  /* same as previous */
+   margin-top: var(--flow-space, 1rem);
+
+}
+
 .container {
    padding-inline: 2em;
    margin-inline: auto;
@@ -104,13 +114,14 @@ input, button, textarea, select {
    border: 0;
 }
 
-.bg-dark {background-color: var(--clr-dark);}
-.bg-accent {background-color: var(--clr-accent);}
-.bg-white {background-color: var(--clr-white);}
 
-.text-dark {color: var(--clr-dark);}
-.text-accent {color: var(--clr-accent);}
-.text-white {color: var(--clr-white);}
+.bg-dark { background-color: hsl( var(--clr-dark) );}
+.bg-accent { background-color: hsl( var(--clr-accent) );}
+.bg-white { background-color: hsl( var(--clr-white) );}
+
+.text-dark { color: hsl( var(--clr-dark) );}
+.text-accent { color: hsl( var(--clr-accent) );}
+.text-white { color: hsl( var(--clr-white) );}
 
 .ff-serif { font-family: var(--ff-serif); } 
 .ff-sans-cond { font-family: var(--ff-sans-cond); } 
@@ -136,4 +147,133 @@ input, button, textarea, select {
 .fs-700,
 .fs-600 {
     line-height: 1.1;
+}
+
+.numbered-title {
+   font-family: var(--ff-sans-cond);
+   font-size: var(--fs-500);
+   text-transform: uppercase;
+   letter-spacing: 4.72px; 
+}
+
+.numbered-title span {
+   margin-right: .5em;
+   font-weight: 700;
+   color: hsl( var(--clr-white) / .25);
+   opacity: .3;
+}
+
+
+/* ========== */
+/* COMPONENTS */
+/* ========== */
+
+.large-button {
+   position: relative;
+   display: grid;
+   place-items: center;
+   padding: 0 2em;
+   border-radius: 50%;
+   aspect-ratio: 1; /* 1 width, 1 height */
+   text-decoration: none;
+   z-index: 1;
+}
+
+.large-button::after {
+   content: '';
+   position: absolute;
+   z-index: -1;
+   background: hsl( var(--clr-white) / .1);
+   width: 100%;
+   height: 100%;
+   border-radius: 50%;
+   opacity: 0;
+   transition: opacity 500ms linear, transform 750ms ease-in-out;
+}
+
+.large-button:hover::after,
+.large-button:focus::after {
+   opacity: 1;
+   transform: scale(1.5);
+}
+
+.primary-navigation {
+   --gap: 8rem;
+   --underline-gap: 2rem;
+   list-style: none;
+   padding: 0;
+   margin: 0;
+}
+
+.primary-navigation a {
+   text-decoration: none;
+}
+
+.primary-navigation a > span {
+   font-weight: 700;
+   margin-right: .5em;   
+}
+
+.underline-indicators > * {
+   padding: var(--underline-gap, 1rem) 0;
+   border: 0;
+   border-bottom: .2rem solid hsl( var(--clr-white) / 0 );
+   cursor: pointer;
+}
+
+.underline-indicators li:hover,
+.underline-indicators li:focus,
+.underline-indicators button:hover,
+.underline-indicators button:focus {
+   border-bottom: .2rem solid hsl( var(--clr-white) / .5);
+}
+
+.underline-indicators > .active,
+.underline-indicators > [aria-selected="true"] {
+   color: hsl( var(--clr-white) / 1);
+   border-color: hsl( var(--clr-white) / 1);
+}
+
+.tab-list {
+   --gap: 2rem;
+}
+
+.dot-indicators > * {
+   cursor: pointer;
+   border: 0;
+   border-radius: 50%;
+   aspect-ratio: 1;
+   padding: .5em;
+   background-color: hsl( var(--clr-white) / .25);
+}
+
+.dot-indicators button:hover,
+.dot-indicators button:focus {
+    background-color: hsl( var(--clr-white) / .5);
+}
+
+.dot-indicators > [aria-selected="true"] {
+   background-color: hsl( var(--clr-white) / 1); 
+}
+
+.number-indicators > * {
+   cursor: pointer;
+   border-radius: 50%;
+   aspect-ratio: 2/1.5;
+   padding: 2em;
+   background-color: hsl( var(--clr-dark) );
+   color: hsl( var(--clr-accent) );
+   border-color: hsl( var(--clr-accent));
+   font-size: var(--fs-500);
+}
+
+.number-indicators button:hover,
+.number-indicators button:focus {
+    border-color: hsl( var(--clr-white));
+    color: hsl( var(--clr-white));
+}
+
+.number-indicators > [aria-selected="true"] {
+   background-color: hsl( var(--clr-white) / 1); 
+   color: hsl( var(--clr-dark) );
 }
